Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
5.2.0 RC1
-
64 bit Ubuntu 10.04, Android 4.1.1, QT 5.2.0 build 209.
-
-
4c631c0bf971f0b41eb319cd3c6d5c723055aac6
Description
Non-standard buttons on a MessageBox aren't displayed. I'm using the default for Android Native Dialogs. In the code below, I can't see the "More" button in the message box on Android, but it looks fine on the Desktop.
QMessageBox mb1;
mb1.setText("Why can't I see the More button?");
mb1.setStandardButtons(QMessageBox::Ok);
QPushButton *qt = mb1.addButton("More...",QMessageBox::HelpRole);
mb1.exec();
Attachments
Issue Links
- relates to
-
QTBUG-57406 MessageDialog does not allow setting the default button
-
- Closed
-
-
QTBUG-37936 QMessageDialogOptions needs text format
-
- Closed
-